--- a/package.json
+++ b/package.json
@@ -12,8 +12,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.36.0",
+    "vite": "^6.0.0"
   }
 }
